<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">



    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <TextView
            style="@style/headerTextStyle"
            android:text="@string/q1" />

        <EditText
            android:id="@+id/first_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:hint="@string/answer_here"
            android:inputType="text" />


        <TextView
            style="@style/headerTextStyle"
            android:text="@string/q2" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/second_q_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/answer1_q2" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/second_q_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/answer2_q2" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/second_q_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/answer3_q2" />

        </android.support.v7.widget.LinearLayoutCompat>


        <TextView
            style="@style/headerTextStyle"
            android:text="@string/q3" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_button_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/answer1_q3" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/answer2_q3" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/answer3_q3" />

            </RadioGroup>


        </android.support.v7.widget.LinearLayoutCompat>


        <TextView
            style="@style/headerTextStyle"
            android:text="@string/q4" />

        <EditText
            android:id="@+id/fourth_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:hint="@string/answer_here"
            android:inputType="text" />


        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="button"
            android:text="@string/submit" />

        <TextView
            android:id="@+id/score_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/score"
            android:textSize="26sp"
            android:layout_marginStart="5dp" />


    </android.support.v7.widget.LinearLayoutCompat>

</ScrollView>